src/objects/saInquiryReplyDetail__c.object
<CustomObject>
    <fields>
        <fullName>ReplyCheckbox01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reply (Checkbox) 01</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReplyCheckbox02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reply (Checkbox) 02</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReplyCheckbox03__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reply (Checkbox) 03</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReplyDateEndTechnical2__c</fullName>
        <label>Reply (Date) End Technical2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyDateEndTechnical__c</fullName>
        <description>Technical field. Can contain wrong data. Use the Date field.</description>
        <label>Reply (Date) End Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyDateEnd__c</fullName>
        <label>Reply (Date) End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReplyDateStartTechnical2__c</fullName>
        <label>Reply (Date) Start Technical2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyDateStartTechnical__c</fullName>
        <description>Technical field. Can contain wrong data. Use the Date field.</description>
        <label>Reply (Date) Start Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyDateStart__c</fullName>
        <label>Reply (Date) Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReplyDecimalTechnical__c</fullName>
        <label>Reply (Decimal) Technical</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyDecimal__c</fullName>
        <label>Reply (Decimal)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReplyNumberTechnical__c</fullName>
        <label>Reply (Number) Technical</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReplyNumber__c</fullName>
        <label>Reply (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReplyRadioButton__c</fullName>
        <label>Reply (Radio Button)</label>
        <picklist>
            <picklistValues>
                <fullName>REPLY_01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPLY_02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPLY_03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPLY_04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPLY_05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPLY_06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPLY_07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPLY_08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPLY_09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REPLY_10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReplyText__c</fullName>
        <label>Reply (Text)</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>saInquiryDetail__c</fullName>
        <label>問い合わせ詳細</label>
        <referenceTo>saInquiryDetail__c</referenceTo>
        <relationshipLabel>問い合わせ返事詳細</relationshipLabel>
        <relationshipName>saInquiryReplyDetail_saInquiryDetail</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>saInquiryReply__c</fullName>
        <label>問い合わせ返事</label>
        <referenceTo>saInquiryReply__c</referenceTo>
        <relationshipLabel>問い合わせ返事詳細</relationshipLabel>
        <relationshipName>saInquiryReplyDetail_md</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>問い合わせ返事詳細</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>saInquiryDetail__c</columns>
        <columns>saInquiryReply__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INQRD-{00000000}</displayFormat>
        <label>問い合わせ返事詳細 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>